[package]
name = "stock_price_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.8"
anyhow = "1.0"
rand = "0.8"
rand_distr = "0.4"
chrono = { version = "0.4", features = ["serde"] }
statrs = "0.16" # Or latest version
actix-web = { version = "4.2.1", default-features = false, features = [] } # Disable defaults, add specific features if needed
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10"
log = "0.4" # Or latest
icu_normalizer_data = "=1.4.0" # Pinning ICU component
yoke = "=0.7.3" # Pinning yoke
idna_adapter = "=1.1.0" # Pinning idna_adapter
zerofrom = "=0.1.5" # Pinning zerofrom

[dev-dependencies]
tempfile = "3.3"
serde_json = "1.0"

[[bin]]
name = "stock_sim_server"
path = "src/bin/server_main.rs"
