[package]
name = "stock_price_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.8"
anyhow = "1.0"
rand = "0.8"
rand_distr = "0.4"
chrono = { version = "0.4", features = ["serde"] }
statrs = "0.16" # Or latest version
actix-web = { version = "4.2.1", default-features = false, features = ["macros"] } # Added "macros" feature
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10"
log = "0.4" # Or latest
icu_normalizer_data = "=1.4.0" # Pinning ICU component
yoke = "=0.7.3" # Pinning yoke
idna_adapter = "=1.1.0" # Pinning idna_adapter
zerofrom = "=0.1.5" # Pinning zerofrom
native-tls = "=0.2.11" # Pinning native-tls for reqwest
reqwest = { version = "0.11", features = ["json"] } # Added as main dep for example
# Ensure tokio has "full" for example's main, current features are "macros", "rt-multi-thread"
# Updating tokio to include "full" might be simpler:
# tokio = { version = "1", features = ["full"] }
# For now, let's see if current tokio features are enough for #[tokio::main] in example.
# If not, will update. Assuming "macros" and "rt-multi-thread" are sufficient for #[tokio::main].
serde_json = "1.0" # Added as main dep for example


[dev-dependencies]
tempfile = "3.3"
# serde_json is now a main dep
# reqwest is now a main dep
lazy_static = "1.4.0"
portpicker = "0.1.1"

# Removed example target
# [[example]]
# name = "simulation_demo"
# path = "examples/demo.rs"

[[bin]]
name = "stock_sim_server"
path = "src/bin/server_main.rs"
